# DFLOW

./: .gitignore  .travis.yml  README.md  generate_test_certs  requirements.txt
client/: .coveragerc  .editorconfig  .gitignore  README.md  config.yml  main.py  requirements.txt  run  run.sh  setup.py  test_client.py  test_server.py
client/client/api/: api.py
client/client/api/static/css/: style.css
client/client/api/static/js/: script.js  smoothie.js
client/client/api/templates/: index.html
client/client/communication/: messages.py  on_board.py
client/client/interconnect/: bluetooth.py  bluetooth_test.py  commlink.py  network.py  network_test.py  nw.py
client/tests/api/: api_test.py
client/tests/communication/: messages_test.py  on_board_test.py
client/tests/interconnect/: bluetooth_test.py  network_test.py
on-board/: .gitignore  CMakeLists.txt  README.md  install_frugally-deep.sh
on-board/on-board_benchmarking/: CAN-benchmark.cpp  CMakeLists.txt  DP-benchmark.cpp  README.md  UDF-benchmark.cpp  benchmarking_trace.py
on-board/src/: config.cpp  config.hpp  main.cpp  mainRadu.cpp  mainWithAI.cpp
on-board/src/can_module/: DFLOW.dbc  can_interface.cpp  can_interface.hpp  can_module.cpp  can_module.hpp  can_python_interface.cpp  can_python_interface.hpp  canmodule.c  canmodule.cpp  canmodule.h  canmodule.hpp  dataretriever.cpp  dataretriever.hpp  file_interface.cpp  file_interface.hpp  pycan_interface.cpp  pycan_interface.hpp  python_linker.cpp  python_module.py
on-board/src/can_module/messages/: abs_module_message.cpp  abs_module_message.hpp  accelerometer_message.cpp  accelerometer_message.hpp  configurable_modes_message.cpp  configurable_modes_message.hpp  engine_sensors_message.cpp  engine_sensors_message.hpp  imu_sensor_message.cpp  imu_sensor_message.hpp  intake_sensors_message.cpp  intake_sensors_message.hpp  tpm_module_message.cpp  tpm_module_message.hpp
on-board/src/crypto/: SymmetricEncryption.cpp  SymmetricEncryption.h
on-board/src/data_processing_module/: data_process_module.cpp  data_process_module.hpp  pipes.cpp  pipes.hpp
on-board/src/inter_comms/: BluetoothComms.cpp  BluetoothComms.h  BluetoothLogic.cpp  BluetoothLogic.h  Communications.h  Logic.cpp  Logic.h  WifiComms.cpp  WifiComms.h
on-board/src/profiling_module/: profiling_message.hpp  profiling_module.cpp  profiling_module.hpp
on-board/src/udf_module/: crash_prediction_keras_regressio.ipynb  crash_prediction_keras_regression.ipynb  edgeAI_functions.cpp  edgeAI_functions.hpp  fdeep_crash_model.json  on_board_data_interface.cpp  on_board_data_interface.hpp
on-board/test/: canmoduletest.cpp  communicationstest.cpp  cryptotest.cpp  dataprocessingtest.cpp  exampletest.cpp  profilingmoduletest.cpp  pythoninterfacetest.cpp  udfmoduletest.cpp
on-board/trace_simulation/: DFLOW_trace_simulator.py  DFLOW_trace_simulator_ABS_ECU.py  DFLOW_trace_simulator_ConfigModes_ECU.py  DFLOW_trace_simulator_Engine_ECU.py  DFLOW_trace_simulator_IMU_ECU.py  DFLOW_trace_simulator_Intake_ECU.py  DFLOW_trace_simulator_TPM_ECU.py  can_bus_setup.sh  requirements.txt  run_trace.sh
